Bug 258639 - Webshortcuts not working like in konqueror
Summary: Webshortcuts not working like in konqueror
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 1.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-03 02:20 UTC by Ralph Müller-Welt
Modified: 2013-04-07 09:40 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Müller-Welt 2010-12-03 02:20:45 UTC
Version:           0.6.1 (using KDE 4.5.4) 
OS:                Linux

created a webshortcut like
telde, dö with
http://dasoertliche.de/Controller?form_name=search_nat&kw=\{1}&ci=\{2}

in konqueror dö:val1 val2 are set correctly to \{1} and \{2}
but not in rekonq, where it is interpreted as &kw=%5C%7B1%7D&ci=%5C%7B2%7D


Reproducible: Didn't try

Steps to Reproduce:
Create a multivalue webshortcut and compare in rekonq and konquror.

Actual Results:  
http://dasoertliche.de/Controller?form_name=search_nat&kw=%5C%7B1%7D&ci=%5C%7B2%7D

Expected Results:  
http://dasoertliche.de/Controller?form_name=search_nat&kw=val1&ci=val2

aseigo in #kde sayd u might not be using KUrlFilter.
Comment 1 Ralph Müller-Welt 2010-12-03 02:28:59 UTC
PS: The shortcut Could be added to the defaults as it searches German telephonebook.

As a workaround in rekonq http://dasoertliche.de/Controller?form_name=search_nat&kw=\{@} would work, if no äöü are given in string.

&kw= - Search for
&ci= - City

similar to telnl
Comment 2 Ralph Müller-Welt 2010-12-03 02:47:31 UTC
PPS: charset should be set to windows-1258
Comment 3 Adrián Chaves (Gallaecio) 2012-09-15 06:57:23 UTC
I can still reproduce this in Rekonq 1.1.
Comment 4 Andrea Diamantini 2013-04-07 09:40:25 UTC
Git commit 5d1a223145be0eb1bb5eed76cda7d4b889d986ed by Andrea Diamantini, on behalf of Maarten De Meyer.
Committed on 07/04/2013 at 11:38.
Pushed by adjam into branch 'master'.

Use kurifilter instead of custom rekonq code.
Now all web shortcuts work.

REVIEWED BY: adjam

M  +15   -3    src/searchengine.cpp
M  +2    -0    src/searchengine.h
M  +1    -6    src/urlbar/listitem.cpp
M  +1    -1    src/urlbar/urlbar.cpp
M  +1    -2    src/urlbar/urlsuggester.cpp
M  +1    -4    src/urlresolver.cpp
M  +3    -3    src/webtab/webview.cpp

http://commits.kde.org/rekonq/5d1a223145be0eb1bb5eed76cda7d4b889d986ed