Use kurifilter instead of custom rekonq code. Now all web shortcuts work.

BUG: 258639

REVIEWED BY: adjam