src/urlbar/urlsuggester.cpp
@@ -321,7 +321,6 @@ void UrlSuggester::computeWebSearches()
     KService::Ptr engine = SearchEngine::fromString(_typedString);
     if (engine)
     {
-        query = query.remove(0, _typedString.indexOf(SearchEngine::delimiter()) + 1);
         _isKDEShortUrl = true;
     }
     else
@@ -331,7 +330,7 @@ void UrlSuggester::computeWebSearches()
 
     if (engine)
     {
-        UrlSuggestionItem item = UrlSuggestionItem(UrlSuggestionItem::Search, SearchEngine::buildQuery(engine, query), query, engine->name());
+        UrlSuggestionItem item = UrlSuggestionItem(UrlSuggestionItem::Search, SearchEngine::buildQuery(query), query, engine->name());
         UrlSuggestionList list;
         list << item;
         _webSearches = list;
